# hackatom

./: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  Dockerfile  INFO.md  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  tsconfig.json
app/app/: layout.tsx  page.tsx
app/components/: AddBotForm.tsx  ProfileMenu.tsx
app/utils/: anchorConfig.tsx  webdexfactory.json
app/utils/IDLs/: webdex_payments.json  webdex_sub_accounts.json
front-end/: package-lock.json  tsconfig.json
front-end-test/: .gitignore  Cargo.toml  package-lock.json  package.json
front-end-test/app/: layout.tsx  package-lock.json  page.tsx
front-end-test/app/components/: CheckBot.tsx
front-end-test/app/contexts/: TabLayoutContext.tsx
front-end-test/app/pages/: AddBotPage.tsx
front-end-test/app/utils/: anchorConfig.tsx
front-end-test/components/: AnimatedTabNavigation.tsx  CopyButton.tsx  TabLayout.tsx  WalletConnectionProvider.tsx
front-end-test/programs/webdex_factory/: Cargo.toml  README.md
front-end-test/programs/webdex_factory/src/: error.rs  processor.rs
front-end-test/programs/webdex_manager/src/: error.rs  state.rs
front-end-test/programs/webdex_network/: Cargo.toml  README.md
front-end-test/programs/webdex_network/src/: state.rs
front-end-test/programs/webdex_payments/: Cargo.toml  README.md
front-end-test/programs/webdex_payments/src/: lib.rs  processor.rs
front-end-test/programs/webdex_strategy/: Cargo.toml
front-end-test/programs/webdex_strategy/src/: lib.rs  processor.rs  state.rs
front-end-test/programs/webdex_sub_accounts/: README.md
front-end-test/programs/webdex_sub_accounts/src/: error.rs  processor.rs  state.rs
front-end-test/shared/factory/src/: lib.rs
front-end-test/shared/manager/: Cargo.toml
front-end-test/shared/manager/src/: lib.rs
front-end-test/shared/payments/src/: lib.rs
front-end-test/shared/sub_accounts/: Cargo.toml
front-end-test/tests/: A_add_bot.ts  B_strategy.ts  C_currency_allow.ts  H_liquidy_add.ts  I_open_position.ts  J_sub_accounts.ts  K_payments.ts  L_network.ts
front-end-test/utils/: anchorConfig.tsx  store.ts
front-end-test/utils/IDLs/: webdex_factory.json  webdex_factory.ts  webdex_manager.json  webdex_manager.ts  webdex_network.json  webdex_strategy.json  webdex_sub_accounts.json
front-end/app/: layout.tsx
front-end/components/: Account.tsx  Dashborad.tsx  GraphStrategies.tsx  Header.tsx  LastOrders.tsx  extract.tsx
front-end/utils/IDLs/: webdex_factory.json  webdex_factory.ts  webdex_manager.json  webdex_network.json  webdex_network.ts  webdex_strategy.ts  webdex_sub_accounts.ts
heatup/: .gitignore  Anchor.toml
heatup/app/: package-lock.json  package.json
heatup/app/app/: page.tsx
heatup/programs/webdexfactory/: Cargo.toml
heatup/programs/webdexfactory/src/processor/: payments.rs
heatup/programs/webdexfactory/src/state/: factory.rs
phase1/blockchains_transpiler/: Cargo.toml  README.md  contents.txt
phase1/blockchains_transpiler/integration_tests/: Cargo.toml
phase1/blockchains_transpiler/integration_tests/tests/: test_pass.rs
programs/webdex/: Cargo.toml
programs/webdex_common/: Cargo.toml
programs/webdex_common/src/: error.rs  factory.rs  lib.rs  manager.rs  payments.rs  strategy.rs  sub_account.rs
programs/webdex_factory/: Cargo.toml  README.md
programs/webdex_factory/src/: authority.rs  error.rs  factory.rs  lib.rs  payments.rs  processor.rs  state.rs  strategy.rs
programs/webdex_manager/: Cargo.toml  README.md
programs/webdex_manager/src/: authority.rs  error.rs  lib.rs  processor.rs  state.rs
programs/webdex_network/: Cargo.toml  README.md
programs/webdex_payments/: Cargo.toml  MIGRATION.md  README.md
programs/webdex_payments/src/: error.rs  lib.rs  processor.rs  state.rs
programs/webdex_strategy/: Cargo.toml  MIGRATION.md  README.md
programs/webdex_sub_accounts/: Cargo.toml  MIGRATION.md  README.md
programs/webdex_sub_accounts/src/: error.rs  lib.rs  processor.rs  state.rs
programs/webdexfactory/: Cargo.toml
programs/webdexfactory/src/: lib.rs
programs/webdexfactory/src/processor/: factory.rs
programs/webdexfactory/src/state/: payments.rs
shared/factory/: Cargo.toml
shared/payments/: Cargo.toml
shared/strategy/: Cargo.toml
shared/sub_accounts/: Cargo.toml
shared/sub_accounts/src/: lib.rs  state.rs
tests/: 01_bot.ts  01_webdex_factory.ts  02_strategy.ts  02_webdex_payments.ts  03_register_user.ts  03_webdex_strategy.ts  04_webdex_sub_accounts.ts  05_currency_allow.ts  05_webdex_close.ts  06_liquidy_add.ts  07_open_position.ts  07_sub_accounts.ts  08_manager.ts  09_payments.ts  A_add_bot.ts  B_strategy.ts  C_currency_allow.ts  D_register_user.ts  E_add_gas_and_pass.ts  F_create_sub_accounts.ts  G_update_bot.ts  H_liquidy_add.ts  I_open_position.ts  J_sub_accounts.ts  K_payments.ts  L_payments.ts  M_close.ts  hackatom.ts  setup.ts  webdex.ts  webdex_factory.ts
tests/add/: bot.ts  coins.ts  fee_tiers.ts  gas.ts  liquidity.ts  mint_tokens.ts  pass.ts  pay_fee.ts  strategy.ts  sub_account.ts  user.ts
tests/get/: balance.ts  balances.ts  bots.ts  coins.ts  fee_tiers.ts  strategies.ts  strategy.ts  sub_account.ts  sub_account_bot.ts  sub_accounts.ts  user.ts  vault_wsol.ts
tests/oldTest/: A_add_bot.ts  B_strategy.ts  C_currency_allow.ts  D_register_user.ts  E_add_gas_and_pass.ts  F_create_sub_accounts.ts  G_update_bot.ts  H_liquidy_add.ts  I_open_position.ts  J_sub_accounts.ts  K_payments.ts  L_network.ts  M_close.ts
tests/parse/: keypair.ts
tests/pause/: strategy_balance.ts
tests/payments/: 01_webdex_factory.ts  02_webdex_payments.ts  03_webdex_strategy.ts  04_webdex_sub_accounts.ts  05_webdex_close.ts
tests/remove/: bots.ts  coins.ts  gas.ts  liquidity.ts  pass.ts  withdrawal.ts
tests/stress/: order.ts
tests/update/: bot.ts  position_liquidity.ts
webdex_manager/src/: error.rs  lib.rs
webdex_payments/: Cargo.toml
webdex_payments/src/: lib.rs
webdex_strategy/: Cargo.toml
webdex_strategy/src/: strategy.rs
webdex_sub_accounts/: Cargo.toml
webdex_sub_accounts/src/: lib.rs
(+38 files in other folders)
