[workspace]
members = [
    "programs/webdex_common",
    "programs/webdex_factory",
    "programs/webdex_manager",
    "programs/webdex_payments",
    "programs/webdex_strategy"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1