[workspace]
members = [
    "programs/webdex_factory",
    "programs/webdex_payments",
    "programs/webdex_strategy",
    "programs/webdex_sub_accounts",
    "programs/webdex_manager",
    "programs/webdex_network",
    "shared/factory",
    "shared/payments",
    "shared/manager",
    "shared/sub_accounts",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1