[package]
name = "webdex_common"
version = "0.1.0"
authors = ["Seu Nome seu@email.com"]
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "webdex_common"

[features]
default = ["error","factory","payments","strategy"]
error = []
factory = []
payments = []
strategy = []

[dependencies]
anchor-lang = { version = "0.31.0" }
anchor-spl = { version = "0.31.0" }
anchor-attribute-program = "0.31.0"
anchor-derive-accounts = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck_derive = "=1.8.1"
regex = "=1.9.0"
blake3 = "=1.5.4"