[package]
name = "webdex_manager"
version = "0.1.0"
authors = ["Seu Nome seu@email.com"]
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "webdex_manager"

[features]
default = ["use-global-allocator"]
use-global-allocator = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["idl-build"] }
anchor-spl = { version = "0.31.0", features = ["idl-build"] }
anchor-attribute-program = "0.31.0"
anchor-derive-accounts = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck_derive = "=1.8.1"
regex = "=1.9.0"
blake3 = "=1.5.4"
webdex_common = { path = "../webdex_common" }