[package]
name = "webdex_payments"
version = "0.1.0"
authors = ["Seu Nome seu@email.com"]
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "webdex_payments"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
serde = { version = "1.0", features = ["derive"] }
shared_sub_accounts = { path = "../../shared/sub_accounts" }
shared_factory = { path = "../../shared/factory" }
shared_manager = { path = "../../shared/manager" }