[package]
name = "webdex_sub_accounts"
version = "0.1.0"
authors = ["Seu Nome seu@email.com"]
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "webdex_sub_accounts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token"] }
serde = { version = "1.0", features = ["derive"] }
mpl-token-metadata = "5.1.0"
shared_factory = { path = "../../shared/factory" }
shared_manager = { path = "../../shared/manager" }
shared_sub_accounts = { path = "../../shared/sub_accounts" }
webdex_payments = { path = "../webdex_payments", features = ["no-entrypoint"] }
webdex_strategy = { path = "../webdex_strategy", features = ["no-entrypoint"] }