[package]
name = "shared_sub_accounts"
version = "0.1.0"
authors = ["Seu Nome seu@email.com"]
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "shared_sub_accounts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = []

[dependencies]
anchor-lang = { version = "0.31.0" }