[package]
name = "shared_manager"
version = "0.1.0"
authors = ["Seu Nome seu@email.com"]
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "shared_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
anchor-attribute-program = "0.31.0"
anchor-derive-accounts = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
mpl-token-metadata = "5.1.0"